# bu2lambdapKK

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pre-selections.md  pyproject.toml  pytest.ini  requirements.txt
ana/: Makefile  README.md  branch_inspector.py  main_analysis.py  plot_lambda_mass.py  run_phase.py  run_pipeline.py  test_data_loading.py
ana/config/: branching_fractions.toml  data.toml  detector.toml  luminosity.toml  particles.toml  paths.toml  physics.toml  selection.toml
ana/modules/: branch_config.py  branching_fraction_calculator.py  data_handler.py  efficiency_calculator.py  lambda_selector.py  mass_fitter.py  selection_optimizer.py
ana/scripts/: generate_presentation_tables.py  plot_lambda_mass.py  plot_optimization_variables.py  validate_presentation_tables.py
ana/tests/: check_hadron_charges.py  test_data_loading.py  test_phase0.py  test_phase1_config.py  test_phase2_data_loading.py  test_phase3_lambda_selection.py  test_phase4_mini_test.py  test_phase4_optimization.py  test_phase4_quick_test.py  test_phase4_selection_optimization.py  test_phase5_mass_fitting.py  test_phase5_quick.py  test_phase6_efficiency.py  test_phase7_branching_ratios.py
ana/utils/: validate_config.py
analysis/: Makefile  README.md  Snakefile  __init__.py  branch_config.py  branches_config.toml  conftest.py  data_loader.py  efficiency.py  event_loss.py  get_branches.sh  main.py  mass_calculator.py  mc_loader.py  plotter.py  resonances.py  run_pipeline.py  selection.py  selection.toml  snakemake_config.yaml
analysis/archive/: README.md
analysis/config/: branching_fractions.toml  data.toml  detector.toml  efficiencies.toml  efficiency_inputs.toml  fitting.toml  generator_effs.toml  luminosity.toml  particles.toml  paths.toml  physics.toml  selection.toml  triggers.toml
analysis/examples/: example_branch_config.py  example_selection.py
analysis/modules/: __init__.py  box_optimizer.py  branch_config.py  branches_config.toml  branching_fraction_calculator.py  cache_manager.py  clean_data_loader.py  config_loader.py  data_handler.py  data_preparation.py  efficiency_calculator.py  exceptions.py  generated_paths.py  lambda_selector.py  logging_config.py  mass_fitter.py  plot_utils.py  presentation_config.py  selection_optimizer.py
analysis/presentation/: README.md
analysis/scripts/: _paths.py  apply_cuts.py  branching_ratios.py  check_mc_restripping_branches.py  check_pid_branch_names.py  collect_results.py  combine_profile_significances.py  compare_branches.py  compare_methods.py  compare_prestrip_poststrip_mc.py  compute_systematics.py  efficiency_calculation.py  export_latex_results.py  generate_blindsafe_pid_figs.py  generate_box_reference.py  generate_comparison_figs.py  generate_hep_report.py  generate_mva_comparison.py  generate_pid_product_fom.py  generate_pid_tradeoff.py  generate_presentation_tables.py  generate_strategy_comparison.py  generate_strategy_comparison_proxy.py  generate_strategy_comparison_proxy_kept.py  load_data.py  mass_fitting.py  mass_fitting_combined.py  optimize_selection.py  passthrough_selection.py  passthrough_selection_systematic.py  plot_2d_mlambdapk_vs_mbu.py  plot_cut_distributions.py  plot_lambda_mass.py  plot_mlambdapk_mc.py  smoke_imports.py  (+8 more)
archive/: README.md
br_ratio/: README.md  br_estimate.py  branches.py  calculate_eff.py  checker.py  config.yml  cut_analyzer.py  eff.json  efficiency.py  explore_norm_mass.py  explore_signal_mass.py  explorer.py  fit.py  fit_results.json  fit_yields.py  loaders.py  report_results.py  run_br.sh  selections.py
docs/: absolute-branching-fractions.md  alias-system.md  pre-selections.md
eff/: calceff_kpkm.py  check_mc_topology.py  reco_eff.py  reco_stripping_eff.py  trigger_eff_KpKm.py  trigger_eff_KpKp.py
fits/: data.py
mkfiles/: preselection.py
notebooks/: L0barPKK.data_DD.ipynb  L0barPKK.data_LL.ipynb  MC_cuts.ipynb  MC_fits.ipynb  data_cuts.ipynb  data_fits.ipynb  plot_data_mc.ipynb  signal_channel.ipynb
tmp/: explore.ipynb  list.sh
utils/: branches.py  data_loader.py  fit.py  mc_kpkm.py  plot.py  plotStyle.py  triggers.py  utils.py
(+338 files in other folders)
